--- a/style.qss
+++ b/style.qss
@@ -6,9 +6,17 @@ QWidget#SPaletteContainer{
 	margin-bottom:5px;
 }
 
-QLabel#SPaletteTopicTitleLabel{
+QLabel#STopicTitleLabel{
 	border:none;
 	font-size:16px;
 	margin-bottom:2px;
 	color:#7CA7B3;
+}
+
+QDockWidget#SDockPalette{
+	
+}
+
+QSlider#SSlider{
+
 }
