--- a/style.qss
+++ b/style.qss
@@ -17,6 +17,16 @@ QDockWidget#SDockPalette{
 	
 }
 
-QSlider#SSlider{
 
-}
+
+QSlider#SSlider::groove:horizontal {
+     border: 1px solid #999999;
+     }
+
+ QSlider#SSlider::handle:horizontal {
+     background: qlineargradient(x1:0, y1:0, x2:1, y2:1, stop:0 #CCCCCC, stop:1 #999999);
+     border: 1px solid #5c5c5c;
+     width: 6px;
+     margin: 1 0 1 0; 
+     border-radius: 2px;
+ }
