--- a/style.qss
+++ b/style.qss
@@ -11,8 +11,31 @@ QLabel#STopicTitleLabel{
 	color:#7CA7B3;
 }
 
-QDockWidget#SDockPalette{
-	
+QDockWidget#SDockPalette::title{
+	background:#B6CFD6;
+	border: 1 solid #999999;
+	border-radius:4;
+	margin: 3 3 0 3;
+	padding: 1 5 1 5;
+	height: 10;
+}
+
+QDockWidget#SDockPalette::close-button{
+	icon-size:12px;
+	subcontrol-position: top right;
+	subcontrol-origin: margin;
+	position: relative;
+	top: 4px; left: 0px; bottom: 0px; right:4px;
+	width: 12px;
+}
+
+QDockWidget#SDockPalette::float-button{
+	icon-size:12px;
+	subcontrol-position: top right;
+	subcontrol-origin: margin;
+	position: relative;
+	top: 4px; left: 0px; bottom: 0px; right:20px;
+	width: 12px;
 }
 
 
