Fixed a performance issue

--- a/style.qss
+++ b/style.qss
@@ -51,3 +51,91 @@ QSlider#SSlider::groove:horizontal {
      margin: 1 0 1 0; 
      border-radius: 2;
  }
+ 
+ /*
+ QScrollBar::vertical
+{
+	background:transparent;
+	margin: 23px 1px 25px 1px;
+}
+
+QScrollBar::handle:vertical
+{
+	border: 2px solid #999999;
+	border-radius:6px;
+	background:#B6CFD6;
+	min-height:40px;
+}
+
+QScrollBar::add-line:vertical
+{
+	image:url(:/images/down_arrow.png);
+	height:16px;
+	background:#B6CFD6;
+	border:2px solid #999999;
+	border-radius:6px;
+	margin: 1px 1px 4px 1px;
+	subcontrol-position:bottom;
+	subcontrol-origin:margin;
+}
+
+QScrollBar::sub-line:vertical
+{
+	image:url(:/images/up_arrow.png);
+	height:16px;
+	background:#B6CFD6;
+	border:2px solid #999999;
+	border-radius:6px;
+	margin: 2px 1px 1px 1px;
+	subcontrol-position:top;
+	subcontrol-origin:margin;
+}
+
+QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical
+{
+	background:transparent;
+}
+
+QScrollBar::horizontal
+{
+	background:transparent;
+	margin: 1px 23px 1px 25px;
+}
+
+QScrollBar::handle:horizontal
+{
+	border: 2px solid #999999;
+	border-radius:6px;
+	background:#B6CFD6;
+	min-width:40px;
+}
+
+QScrollBar::add-line:horizontal
+{
+	image:url(:/images/right_arrow.png);
+	width:16px;
+	background:#B6CFD6;
+	border:2px solid #999999;
+	border-radius:6px;
+	margin: 1px 1px 1px 4px;
+	subcontrol-position:right;
+	subcontrol-origin:margin;
+}
+
+QScrollBar::sub-line:horizontal
+{
+	image:url(:/images/left_arrow.png);
+	width:16px;
+	background:#B6CFD6;
+	border:2px solid #999999;
+	border-radius:6px;
+	margin: 1px 2px 1px 1px;
+	subcontrol-position:left;
+	subcontrol-origin:margin;
+}
+
+QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal
+{
+	background:transparent;
+}
+*/
