Fixed a repaint color issue when items are selected

--- a/res.qrc
+++ b/res.qrc
@@ -8,5 +8,8 @@
         <file>res/zoomOut.png</file>
         <file>res/pan.png</file>
         <file>style.qss</file>
+        <file>res/close.svg</file>
+        <file>res/minus.svg</file>
+        <file>res/plus.svg</file>
     </qresource>
 </RCC>
